docs/sources/k6/v0.47.x/using-k6/metrics/reference.md
---
title: Built-in metrics
description: A reference of built-in metrics for different supported protocols.
weight: 000
---

# Built-in metrics

Every k6 test emits built-in and [custom metrics](https://grafana.com/docs/k6/<K6_VERSION>/using-k6/metrics/create-custom-metrics).
Each supported protocol also has its specific metrics.

## Standard built-in metrics

k6 always collects the following metrics, no matter what protocol the test uses:

| Metric Name        | Type    | Description                                                                                                                                                                                                                                                                                                        |
| ------------------ | ------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------ |
| checks             | [Rate](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/rate/)    | The rate of successful checks.                                                                                                                                                                                                                                                                                     |
| data_received      | [Counter](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/counter/) | The amount of received data. [This example covers how to track data for an individual URL](https://grafana.com/docs/k6/<K6_VERSION>/examples/track-transmitted-data-per-url).                                                                                                                                      |
| data_sent          | [Counter](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/counter/) | The amount of data sent. [Track data for an individual URL](https://grafana.com/docs/k6/<K6_VERSION>/examples/track-transmitted-data-per-url) to track data for an individual URL.                                                                                                                                 |
| dropped_iterations | [Counter](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/counter/) | The number of iterations that weren't started due to lack of VUs (for the arrival-rate executors) or lack of time (expired maxDuration in the iteration-based executors). Refer to [Dropped iterations](https://grafana.com/docs/k6/<K6_VERSION>/using-k6/scenarios/concepts/dropped-iterations) for more details. |
| iteration_duration | [Trend](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/trend/)   | The time to complete one full iteration, including time spent in `setup` and `teardown`. To calculate the duration of the iteration's function for the specific scenario, [try this workaround](https://grafana.com/docs/k6/<K6_VERSION>/using-k6/workaround-iteration-duration).                                  |
| iterations         | [Counter](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/counter/) | The aggregate number of times the VUs execute the JS script (the `default` function).                                                                                                                                                                                                                              |
| vus                | [Gauge](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/gauge/)   | Current number of active virtual users                                                                                                                                                                                                                                                                             |
| vus_max            | [Gauge](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/gauge/)   | Max possible number of virtual users (VU resources are [pre-allocated](https://grafana.com/docs/k6/<K6_VERSION>/using-k6/scenarios/concepts/arrival-rate-vu-allocation), to avoid affecting performance when scaling up load).                                                                                     |

## HTTP-specific built-in metrics {#http}

These metrics are generated only when the test makes HTTP requests.

{{< admonition type="note" >}}

For all `http_req_*` metrics, **the timestamp is emitted the end of the request.**
In other words, the timestamp happens when k6 receives the end of the response body, or the request times out.

{{< /admonition >}}

| Metric Name              | Type    | Description                                                                                                                                                                                                                                  |
| ------------------------ | ------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| http_req_blocked         | [Trend](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/trend/)   | Time spent blocked (waiting for a free TCP connection slot) before initiating the request. `float`                                                                                                                                           |
| http_req_connecting      | [Trend](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/trend/)   | Time spent establishing TCP connection to the remote host. `float`                                                                                                                                                                           |
| http_req_duration        | [Trend](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/trend/)   | Total time for the request. It's equal to `http_req_sending + http_req_waiting + http_req_receiving` (i.e. how long did the remote server take to process the request and respond, without the initial DNS lookup/connection times). `float` |
| http_req_failed          | [Rate](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/rate/)    | The rate of failed requests according to [setResponseCallback](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-http/set-response-callback).                                                                                       |
| http_req_receiving       | [Trend](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/trend/)   | Time spent receiving response data from the remote host. `float`                                                                                                                                                                             |
| http_req_sending         | [Trend](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/trend/)   | Time spent sending data to the remote host. `float`                                                                                                                                                                                          |
| http_req_tls_handshaking | [Trend](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/trend/)   | Time spent handshaking TLS session with remote host                                                                                                                                                                                          |
| http_req_waiting         | [Trend](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/trend/)   | Time spent waiting for response from remote host (a.k.a. “time to first byte”, or “TTFB”). `float`                                                                                                                                           |
| http_reqs                | [Counter](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/counter/) | How many total HTTP requests k6 generated.                                                                                                                                                                                                   |

## Browser metrics {#browser}

The [k6 browser module](https://grafana.com/docs/k6/<K6_VERSION>/using-k6-browser) emits its own metrics based on the [Core Web Vitals](https://web.dev/vitals/#core-web-vitals).

These core metrics will evolve over time when technology changes, but for now, k6 tracks the following core web vitals:

<!-- vale off -->

| Core Web Vital        | Description                                                                                                                                                                                                                            |
| --------------------- | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| browser_web_vital_cls | Measures the visual stability on a webpage by quantifying the amount of unexpected layout shift of visible page content. Refer to [Cumulative Layout Shift](https://web.dev/cls/) for more information.                                |
| browser_web_vital_fid | Measures the responsiveness of a web page by quantifying the delay between a user’s first interaction, such as clicking a button, and the browser’s response. Refer to [First Input Delay](https://web.dev/fid/) for more information. |
| browser_web_vital_lcp | Measures the time it takes for the largest content element on a page to become visible. Refer to [Largest Contentful Paint](https://web.dev/lcp/) for more information.                                                                |

<!-- vale on -->

### Other Web Vitals

Apart from the Core Web Vitals, the browser module also reports [Other Web Vitals](https://web.dev/vitals/#other-web-vitals).

<!-- vale off -->

| Other Web Vital        | Description                                                                                                                                                                                                   |
| ---------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| browser_web_vital_fcp  | Measures the time it takes for the browser to render the first DOM element on the page, whether that's a text, image or header. Refer to [First Contentful Paint](https://web.dev/fcp/) for more information. |
| browser_web_vital_inp  | An experimental metric that measures a page's responsiveness. Refer to [Interaction to Next Paint](https://web.dev/inp/) for more information.                                                                |
| browser_web_vital_ttfb | Measures the time it takes between the browser request and the start of the response from a server. Refer to [Time to First Byte](https://web.dev/ttfb/) for more information.                                |

<!-- vale on -->

## Built-in WebSocket metrics {#websockets}

`k6` emits the following metrics when interacting with a WebSocket service through the [`experimental`](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-experimental/websockets) or legacy websockets API.

| Metric name         | Type    | Description                                                                                                  |
| ------------------- | ------- | ------------------------------------------------------------------------------------------------------------ |
| ws_connecting       | [Trend](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/trend/)   | Total duration for the WebSocket connection request.                                                         |
| ws_msgs_received    | [Counter](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/counter/) | Total number of messages received                                                                            |
| ws_msgs_sent        | [Counter](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/counter/) | Total number of messages sent                                                                                |
| ws_ping             | [Trend](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/trend/)   | Duration between a ping request and its pong reception                                                       |
| ws_session_duration | [Trend](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/trend/)   | Duration of the WebSocket session. Time between the start of the connection and the end of the VU execution. |
| ws_sessions         | [Counter](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/counter/) | Total number of started WebSocket sessions.                                                                  |

## Built-in gRPC metrics {#grpc}

k6 emits the following metrics when it interacts with a service through the [`gRPC`](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-net-grpc/) API.

| Metric Name                | Type    | Description                               |
| -------------------------- | ------- | ----------------------------------------- |
| grpc_req_duration          | [Trend](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/trend/)   | Time to receive response from remote host |
| grpc_streams               | [Counter](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/counter/) | Total number of started streams           |
| grpc_streams_msgs_received | [Counter](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/counter/) | Total number of messages received         |
| grpc_streams_msgs_sent     | [Counter](https://grafana.com/docs/k6/<K6_VERSION>/javascript-api/k6-metrics/counter/) | Total number of messages sent             |

{{< admonition type="note" >}}

Steams-related metrics (`grpc_streams*`) are available only when using the `k6/experimental/grpc` module which is available on `k6` version `0.45.0` or higher.

{{< /admonition >}}
